Cleanups using Inspect Code; replace remaining native methods with stubs.